# kv

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/src/: lib.rs
schemas/protos/: data.proto  op.proto
schemas/src/: lib.rs
server/: Cargo.toml
server/src/: data.rs  main.rs
wal/: Cargo.toml
wal/src/: lib.rs
