[workspace]
members = [
    "client",
    "server",
    "schemas",
    "wal"
]
resolver = "2"

[workspace.dependencies]
glob = "0.3.1"
mlg = "0.1.1"
bincode = "1.3.3"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
prost = "0.12.0"
prost-types = "0.12.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tonic = "0.10.0"
tonic-health = "0.10.0"
anyhow = "1.0.69"
